--- a/JBCSolder.ioc
+++ b/JBCSolder.ioc
@@ -29,44 +29,53 @@ FREERTOS.IPParameters=Tasks01,configENABLE_FPU
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.IPParameters=Timing,I2C_Speed_Mode
+I2C1.Timing=0x6000030D
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
 Mcu.IP2=FMC
 Mcu.IP3=FREERTOS
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP4=I2C1
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IPNb=8
 Mcu.Name=STM32F767VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PA5
-Mcu.Pin10=PE15
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PD10
-Mcu.Pin14=PD14
-Mcu.Pin15=PD15
-Mcu.Pin16=PA10
-Mcu.Pin17=PD0
-Mcu.Pin18=PD1
-Mcu.Pin19=PD2
-Mcu.Pin2=PE7
-Mcu.Pin20=PD4
-Mcu.Pin21=PD5
-Mcu.Pin22=PD7
-Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin24=VP_SYS_VS_tim6
-Mcu.Pin3=PE8
-Mcu.Pin4=PE9
-Mcu.Pin5=PE10
-Mcu.Pin6=PE11
-Mcu.Pin7=PE12
-Mcu.Pin8=PE13
-Mcu.Pin9=PE14
-Mcu.PinsNb=25
+Mcu.Pin10=PE14
+Mcu.Pin11=PE15
+Mcu.Pin12=PD8
+Mcu.Pin13=PD9
+Mcu.Pin14=PD10
+Mcu.Pin15=PD14
+Mcu.Pin16=PD15
+Mcu.Pin17=PA10
+Mcu.Pin18=PD0
+Mcu.Pin19=PD1
+Mcu.Pin2=PB2
+Mcu.Pin20=PD2
+Mcu.Pin21=PD4
+Mcu.Pin22=PD5
+Mcu.Pin23=PD7
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PE0
+Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin28=VP_SYS_VS_tim6
+Mcu.Pin3=PE7
+Mcu.Pin4=PE8
+Mcu.Pin5=PE9
+Mcu.Pin6=PE10
+Mcu.Pin7=PE11
+Mcu.Pin8=PE12
+Mcu.Pin9=PE13
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767VITx
@@ -74,6 +83,7 @@ MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -97,6 +107,16 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LCD_BACKLIGHT
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=TS_INT
+PB2.Locked=true
+PB2.Signal=GPXTI2
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PD0.Signal=FMC_D2_DA2
 PD1.Signal=FMC_D3_DA3
 PD10.Locked=true
@@ -120,6 +140,10 @@ PD8.Locked=true
 PD8.Signal=FMC_D13_DA13
 PD9.Locked=true
 PD9.Signal=FMC_D14_DA14
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=TS_RST
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE10.Locked=true
 PE10.Signal=FMC_D7_DA7
 PE11.Locked=true
@@ -132,6 +156,7 @@ PE14.Locked=true
 PE14.Signal=FMC_D11_DA11
 PE15.Locked=true
 PE15.Signal=FMC_D12_DA12
+PE3.Locked=true
 PE3.Signal=FMC_A19
 PE7.Locked=true
 PE7.Signal=FMC_D4_DA4
@@ -167,7 +192,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMC_Init-FMC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -283,6 +308,8 @@ SH.FMC_NOE.0=FMC_NOE,Lcd1
 SH.FMC_NOE.ConfNb=1
 SH.FMC_NWE.0=FMC_NWE,Lcd1
 SH.FMC_NWE.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim6.Mode=TIM6
