--- a/JBCSolder.ioc
+++ b/JBCSolder.ioc
@@ -1,4 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings=0x60000000
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_ENABLE
@@ -25,9 +32,6 @@ FMC.BusTurnAroundDuration1=10
 FMC.DataSetupTime1=10
 FMC.ExtendedMode1=FMC_EXTENDED_MODE_DISABLE
 FMC.IPParameters=ExtendedMode1,AddressSetupTime1,DataSetupTime1,BusTurnAroundDuration1
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
@@ -35,70 +39,91 @@ I2C1.IPParameters=Timing,I2C_Speed_Mode
 I2C1.Timing=0x6000030D
 KeepUserPlacement=false
 Mcu.Family=STM32F7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=DMA
-Mcu.IP2=FMC
-Mcu.IP3=FREERTOS
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M7
+Mcu.IP2=DMA
+Mcu.IP3=FMC
 Mcu.IP4=I2C1
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=SYS
-Mcu.IPNb=8
+Mcu.IP8=TIM7
+Mcu.IPNb=9
 Mcu.Name=STM32F767VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
-Mcu.Pin1=PA5
-Mcu.Pin10=PE14
-Mcu.Pin11=PE15
-Mcu.Pin12=PD8
-Mcu.Pin13=PD9
-Mcu.Pin14=PD10
-Mcu.Pin15=PD14
-Mcu.Pin16=PD15
-Mcu.Pin17=PA10
-Mcu.Pin18=PD0
-Mcu.Pin19=PD1
-Mcu.Pin2=PB2
-Mcu.Pin20=PD2
-Mcu.Pin21=PD4
-Mcu.Pin22=PD5
-Mcu.Pin23=PD7
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PE0
-Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin28=VP_SYS_VS_tim6
-Mcu.Pin3=PE7
-Mcu.Pin4=PE8
-Mcu.Pin5=PE9
-Mcu.Pin6=PE10
-Mcu.Pin7=PE11
-Mcu.Pin8=PE12
-Mcu.Pin9=PE13
-Mcu.PinsNb=29
+Mcu.Pin1=PH0/OSC_IN
+Mcu.Pin10=PE9
+Mcu.Pin11=PE10
+Mcu.Pin12=PE11
+Mcu.Pin13=PE12
+Mcu.Pin14=PE13
+Mcu.Pin15=PE14
+Mcu.Pin16=PE15
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
+Mcu.Pin19=PD10
+Mcu.Pin2=PH1/OSC_OUT
+Mcu.Pin20=PD11
+Mcu.Pin21=PD12
+Mcu.Pin22=PD13
+Mcu.Pin23=PD14
+Mcu.Pin24=PD15
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA10
+Mcu.Pin28=PC11
+Mcu.Pin29=PD0
+Mcu.Pin3=PA0/WKUP
+Mcu.Pin30=PD1
+Mcu.Pin31=PD2
+Mcu.Pin32=PD4
+Mcu.Pin33=PD5
+Mcu.Pin34=PD7
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
+Mcu.Pin37=PE0
+Mcu.Pin38=PE1
+Mcu.Pin39=VP_SYS_VS_tim6
+Mcu.Pin4=PA1
+Mcu.Pin40=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM7_VS_OPM
+Mcu.Pin5=PA5
+Mcu.Pin6=PA7
+Mcu.Pin7=PB2
+Mcu.Pin8=PE7
+Mcu.Pin9=PE8
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767VITx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0/WKUP.GPIOParameters=GPIO_Label
+PA0/WKUP.GPIO_Label=BUTTON_ENC
+PA0/WKUP.Locked=true
+PA0/WKUP.Signal=GPIO_Input
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ADC_TCA_IN
+PA1.Locked=true
+PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=LED_RED
 PA10.Locked=true
@@ -107,6 +132,10 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LCD_BACKLIGHT
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=TCA_AMPLIFIER_EN
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=TS_INT
 PB2.Locked=true
@@ -117,10 +146,34 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=HEATER_A_EN
+PC11.Locked=true
+PC11.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=SLEEP_A
+PC8.Locked=true
+PC8.Signal=GPIO_Input
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=SLEEP_B
+PC9.Locked=true
+PC9.Signal=GPIO_Input
 PD0.Signal=FMC_D2_DA2
 PD1.Signal=FMC_D3_DA3
 PD10.Locked=true
 PD10.Signal=FMC_D15_DA15
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=BUTTON_1
+PD11.Locked=true
+PD11.Signal=GPIO_Input
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=BUTTON_2
+PD12.Locked=true
+PD12.Signal=GPIO_Input
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=BUTTON_3
+PD13.Locked=true
+PD13.Signal=GPIO_Input
 PD14.Locked=true
 PD14.Signal=FMC_D0_DA0
 PD15.Locked=true
@@ -144,6 +197,10 @@ PE0.GPIOParameters=GPIO_Label
 PE0.GPIO_Label=TS_RST
 PE0.Locked=true
 PE0.Signal=GPIO_Output
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=ZERO_CROSS
+PE1.Locked=true
+PE1.Signal=GPXTI1
 PE10.Locked=true
 PE10.Signal=FMC_D7_DA7
 PE11.Locked=true
@@ -164,6 +221,10 @@ PE8.Locked=true
 PE8.Signal=FMC_D5_DA5
 PE9.Locked=true
 PE9.Signal=FMC_D6_DA6
+PH0/OSC_IN.Mode=HSE-External-Oscillator
+PH0/OSC_IN.Signal=RCC_OSC_IN
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
+PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -192,7 +253,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -208,14 +269,15 @@ RCC.EthernetFreq_Value=216000000
 RCC.FCLKCortexFreq_Value=216000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=216000000
-RCC.HSE_VALUE=25000000
+RCC.HSE_VALUE=8000000
+RCC.HSICalibrationValue=8
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=54000000
 RCC.I2C2Freq_Value=54000000
 RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SFreq_Value=192000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICalibrationValue,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFTFreq_Value=96000000
 RCC.LPTIM1Freq_Value=54000000
 RCC.LSE_VALUE=32768
@@ -226,16 +288,18 @@ RCC.PLLI2SPCLKFreq_Value=192000000
 RCC.PLLI2SQCLKFreq_Value=192000000
 RCC.PLLI2SRCLKFreq_Value=192000000
 RCC.PLLI2SRoutputFreq_Value=192000000
-RCC.PLLM=8
+RCC.PLLM=4
 RCC.PLLN=216
-RCC.PLLQCLKFreq_Value=216000000
-RCC.PLLQoutputFreq_Value=216000000
+RCC.PLLQ=9
+RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLQoutputFreq_Value=48000000
 RCC.PLLRFreq_Value=216000000
 RCC.PLLSAIPCLKFreq_Value=192000000
 RCC.PLLSAIQCLKFreq_Value=192000000
 RCC.PLLSAIRCLKFreq_Value=192000000
 RCC.PLLSAIoutputFreq_Value=192000000
-RCC.RNGFreq_Value=216000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
 RCC.SDMMC2Freq_Value=216000000
@@ -251,11 +315,13 @@ RCC.USART1Freq_Value=108000000
 RCC.USART2Freq_Value=54000000
 RCC.USART3Freq_Value=54000000
 RCC.USART6Freq_Value=108000000
-RCC.USBFreq_Value=216000000
+RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
 SH.FMC_A19.0=FMC_A19,A19_1
 SH.FMC_A19.ConfNb=1
 SH.FMC_D0_DA0.0=FMC_DA0
@@ -308,11 +374,20 @@ SH.FMC_NOE.0=FMC_NOE,Lcd1
 SH.FMC_NOE.ConfNb=1
 SH.FMC_NWE.0=FMC_NWE,Lcd1
 SH.FMC_NWE.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM7.IPParameters=Period,AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler
+TIM7.Period=1000
+TIM7.Prescaler=216
+TIM7.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
+VP_TIM7_VS_OPM.Mode=OPM_bit
+VP_TIM7_VS_OPM.Signal=TIM7_VS_OPM
 board=custom
 isbadioc=false
