--- a/JBCSolder.ioc
+++ b/JBCSolder.ioc
@@ -47,8 +47,9 @@ Mcu.IP4=I2C1
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=SYS
-Mcu.IP8=TIM7
-Mcu.IPNb=9
+Mcu.IP8=TIM1
+Mcu.IP9=TIM7
+Mcu.IPNb=10
 Mcu.Name=STM32F767VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -71,33 +72,35 @@ Mcu.Pin23=PD14
 Mcu.Pin24=PD15
 Mcu.Pin25=PC8
 Mcu.Pin26=PC9
-Mcu.Pin27=PA10
-Mcu.Pin28=PC11
-Mcu.Pin29=PD0
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PA0/WKUP
-Mcu.Pin30=PD1
-Mcu.Pin31=PD2
-Mcu.Pin32=PD4
-Mcu.Pin33=PD5
-Mcu.Pin34=PD7
-Mcu.Pin35=PB6
-Mcu.Pin36=PB7
-Mcu.Pin37=PE0
-Mcu.Pin38=PE1
-Mcu.Pin39=VP_SYS_VS_tim6
+Mcu.Pin30=PC11
+Mcu.Pin31=PD0
+Mcu.Pin32=PD1
+Mcu.Pin33=PD2
+Mcu.Pin34=PD4
+Mcu.Pin35=PD5
+Mcu.Pin36=PD7
+Mcu.Pin37=PB6
+Mcu.Pin38=PB7
+Mcu.Pin39=PE0
 Mcu.Pin4=PA1
-Mcu.Pin40=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM7_VS_OPM
+Mcu.Pin40=PE1
+Mcu.Pin41=VP_SYS_VS_tim6
+Mcu.Pin42=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM7_VS_OPM
 Mcu.Pin5=PA5
 Mcu.Pin6=PA7
 Mcu.Pin7=PB2
 Mcu.Pin8=PE7
 Mcu.Pin9=PE8
-Mcu.PinsNb=42
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767VITx
-MxCube.Version=6.1.0
+MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -136,6 +139,14 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=TCA_AMPLIFIER_EN
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=ENC_A
+PA8.Locked=true
+PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=ENC_B
+PA9.Locked=true
+PA9.Signal=S_TIM1_CH2
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=TS_INT
 PB2.Locked=true
@@ -253,7 +264,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -378,10 +389,19 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
+SH.S_TIM1_CH2.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.EncoderMode=TIM_ENCODERMODE_TI1
+TIM1.IC1Filter=10
+TIM1.IC2Filter=10
+TIM1.IPParameters=EncoderMode,IC1Filter,IC2Filter,AutoReloadPreload
 TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM7.IPParameters=Period,AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler
 TIM7.Period=1000
-TIM7.Prescaler=216
+TIM7.Prescaler=108
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
