--- a/JBCSolder.ioc
+++ b/JBCSolder.ioc
@@ -8,8 +8,9 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings=0x60000000
+CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_ENABLE
-CORTEX_M7.IPParameters=MPU_Control,Enable-Cortex_Memory_Protection_Unit_Region0_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings,Size-Cortex_Memory_Protection_Unit_Region0_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings
+CORTEX_M7.IPParameters=MPU_Control,Enable-Cortex_Memory_Protection_Unit_Region0_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings,Size-Cortex_Memory_Protection_Unit_Region0_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings,CPU_DCache
 CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_512MB
 Dma.MEMTOMEM.0.Direction=DMA_MEMORY_TO_MEMORY
@@ -41,6 +42,8 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_HS
 Mcu.IP2=DMA
 Mcu.IP3=FMC
 Mcu.IP4=I2C1
@@ -49,7 +52,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
 Mcu.IP9=TIM7
-Mcu.IPNb=10
+Mcu.IPNb=12
 Mcu.Name=STM32F767VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -61,42 +64,45 @@ Mcu.Pin13=PE12
 Mcu.Pin14=PE13
 Mcu.Pin15=PE14
 Mcu.Pin16=PE15
-Mcu.Pin17=PD8
-Mcu.Pin18=PD9
-Mcu.Pin19=PD10
+Mcu.Pin17=PB14
+Mcu.Pin18=PB15
+Mcu.Pin19=PD8
 Mcu.Pin2=PH1/OSC_OUT
-Mcu.Pin20=PD11
-Mcu.Pin21=PD12
-Mcu.Pin22=PD13
-Mcu.Pin23=PD14
-Mcu.Pin24=PD15
-Mcu.Pin25=PC8
-Mcu.Pin26=PC9
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin20=PD9
+Mcu.Pin21=PD10
+Mcu.Pin22=PD11
+Mcu.Pin23=PD12
+Mcu.Pin24=PD13
+Mcu.Pin25=PD14
+Mcu.Pin26=PD15
+Mcu.Pin27=PC8
+Mcu.Pin28=PC9
+Mcu.Pin29=PA8
 Mcu.Pin3=PA0/WKUP
-Mcu.Pin30=PC11
-Mcu.Pin31=PD0
-Mcu.Pin32=PD1
-Mcu.Pin33=PD2
-Mcu.Pin34=PD4
-Mcu.Pin35=PD5
-Mcu.Pin36=PD7
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin39=PE0
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PC11
+Mcu.Pin33=PD0
+Mcu.Pin34=PD1
+Mcu.Pin35=PD2
+Mcu.Pin36=PD4
+Mcu.Pin37=PD5
+Mcu.Pin38=PD7
+Mcu.Pin39=PB6
 Mcu.Pin4=PA1
-Mcu.Pin40=PE1
-Mcu.Pin41=VP_SYS_VS_tim6
-Mcu.Pin42=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM7_VS_OPM
+Mcu.Pin40=PB7
+Mcu.Pin41=PE0
+Mcu.Pin42=PE1
+Mcu.Pin43=VP_SYS_VS_tim6
+Mcu.Pin44=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM7_VS_OPM
+Mcu.Pin46=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin5=PA5
 Mcu.Pin6=PA7
 Mcu.Pin7=PB2
 Mcu.Pin8=PE7
 Mcu.Pin9=PE8
-Mcu.PinsNb=44
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767VITx
@@ -104,18 +110,19 @@ MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:true\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.OTG_HS_IRQn=true\:2\:0\:true\:false\:true\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SysTick_IRQn=true\:1\:0\:true\:false\:true\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:1\:0\:true\:false\:true\:false\:true
+NVIC.TIM7_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -147,6 +154,10 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=ENC_B
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
+PB14.Mode=Device_Only_FS
+PB14.Signal=USB_OTG_HS_DM
+PB15.Mode=Device_Only_FS
+PB15.Signal=USB_OTG_HS_DP
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=TS_INT
 PB2.Locked=true
@@ -288,7 +299,7 @@ RCC.I2C2Freq_Value=54000000
 RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SFreq_Value=192000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICalibrationValue,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICalibrationValue,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFTFreq_Value=96000000
 RCC.LPTIM1Freq_Value=54000000
 RCC.LSE_VALUE=32768
@@ -309,7 +320,6 @@ RCC.PLLSAIPCLKFreq_Value=192000000
 RCC.PLLSAIQCLKFreq_Value=192000000
 RCC.PLLSAIRCLKFreq_Value=192000000
 RCC.PLLSAIoutputFreq_Value=192000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
@@ -403,11 +413,21 @@ TIM7.IPParameters=Period,AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler
 TIM7.Period=1000
 TIM7.Prescaler=108
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
+USB_DEVICE.CLASS_NAME_HS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_HS,VirtualModeHS,CLASS_NAME_HS,USBD_LPM_ENABLED-CDC_HS
+USB_DEVICE.USBD_LPM_ENABLED-CDC_HS=0
+USB_DEVICE.VirtualMode-CDC_HS=Cdc
+USB_DEVICE.VirtualModeHS=Cdc_HS
+USB_OTG_HS.IPParameters=VirtualMode-Device_Only_FS,dma_enable-Device_Only_FS
+USB_OTG_HS.VirtualMode-Device_Only_FS=Device_Only_FS
+USB_OTG_HS.dma_enable-Device_Only_FS=DISABLE
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_TIM7_VS_OPM.Mode=OPM_bit
 VP_TIM7_VS_OPM.Signal=TIM7_VS_OPM
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=custom
 isbadioc=false
