--- a/JBCSolder.ioc
+++ b/JBCSolder.ioc
@@ -6,8 +6,8 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings=0x60000000
@@ -267,7 +267,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F767VITx
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.17.2
 ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
+ProjectManager.HalAssertFull=true
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
@@ -441,3 +441,4 @@ VP_TIM7_VS_OPM.Signal=TIM7_VS_OPM
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=custom
+isbadioc=false
